# omni-agent

./: .gitignore  CMakeLists.txt  NOTICE  README.md  package.xml
.github/workflows/: code-style.yml
cmake/: FetchThirdParty.cmake  webrtc_audio_processing.cmake
examples/: voice_chat.cpp  voice_chat_aec.cpp  voice_chat_daemon.cpp
include/: aec_duplex_processor.hpp  engine_init.hpp  mcp_helper.hpp  text_buffer.hpp  voice_common.hpp  voice_pipeline.hpp
src/: aec_duplex_processor.cpp  daemon_config.cpp  daemon_config.hpp  engine_init.cpp  mcp_helper.cpp  text_buffer.cpp  voice_common.cpp  voice_pipeline.cpp
